--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
     "compile": "shx rm -rf lib/ && tsc"
   },
   "dependencies": {
-    "@feathersjs/authentication": "^4.3.0-pre.3",
-    "@feathersjs/authentication-local": "^4.3.0-pre.3",
-    "@feathersjs/authentication-oauth": "^4.3.0-pre.3",
-    "@feathersjs/configuration": "^4.3.0-pre.3",
-    "@feathersjs/errors": "^4.3.0-pre.3",
-    "@feathersjs/express": "^4.3.0-pre.3",
-    "@feathersjs/feathers": "^4.3.0-pre.3",
-    "@feathersjs/socketio": "^4.3.0-pre.3",
+    "@feathersjs/authentication": "^4.3.3",
+    "@feathersjs/authentication-local": "^4.3.3",
+    "@feathersjs/authentication-oauth": "^4.3.3",
+    "@feathersjs/configuration": "^4.3.3",
+    "@feathersjs/errors": "^4.3.3",
+    "@feathersjs/express": "^4.3.3",
+    "@feathersjs/feathers": "^4.3.3",
+    "@feathersjs/socketio": "^4.3.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "feathers-nedb": "^5.0.1",
-    "helmet": "^3.20.0",
+    "helmet": "^3.21.1",
     "nedb": "^1.8.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.2.1"
@@ -53,18 +53,18 @@
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/helmet": "0.0.44",
-    "@types/jsonwebtoken": "^8.3.3",
+    "@types/jsonwebtoken": "^8.3.4",
     "@types/mocha": "^5.2.7",
-    "@types/nedb": "^1.8.8",
+    "@types/nedb": "^1.8.9",
     "@types/serve-favicon": "^2.2.31",
     "axios": "^0.19.0",
     "mocha": "^6.2.0",
-    "nodemon": "^1.19.1",
+    "nodemon": "^1.19.2",
     "nyc": "^14.1.1",
     "shx": "^0.3.2",
     "ts-mocha": "^6.0.0",
     "ts-node-dev": "^1.0.0-pre.41",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3"
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.3"
   }
 }
