--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@feathersjs/errors": "^4.3.11",
     "@feathersjs/express": "^4.4.0",
     "@feathersjs/feathers": "^4.4.0",
+    "@feathersjs/schema": "0.0.1-alpha.1",
     "@feathersjs/socketio": "^4.4.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
