--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@feathersjs/feathers": "^4.4.0",
     "@feathersjs/schema": "0.0.1-alpha.1",
     "@feathersjs/socketio": "^4.4.0",
+    "@hapi/joi": "^16.1.8",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "feathers-nedb": "^5.1.0",
