--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "clean": "shx rm -rf test/data/",
     "coverage": "nyc npm run mocha",
     "mocha": "npm run clean && NODE_ENV=test ts-mocha \"test/**/*.ts\" --recursive --exit",
-    "compile": "shx rm -rf lib/ && tsc"
+    "compile": "shx rm -rf lib/ && tsc",
+    "update-dependencies": "ncu -u"
   },
   "dependencies": {
     "@feathersjs/authentication": "^4.5.2",
@@ -58,11 +59,12 @@
     "@types/nedb": "^1.8.9",
     "@types/serve-favicon": "^2.5.0",
     "axios": "^0.19.2",
-    "mocha": "^7.1.0",
+    "mocha": "^7.1.1",
     "nodemon": "^2.0.2",
+    "npm-check-updates": "^4.0.4",
     "nyc": "^15.0.0",
     "shx": "^0.3.2",
-    "ts-mocha": "^6.0.0",
+    "ts-mocha": "^7.0.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.1.0",
     "typescript": "^3.8.3"
