--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "npm run compile && node lib/",
     "clean": "shx rm -rf test/data/",
     "coverage": "nyc npm run mocha",
-    "mocha": "npm run clean && NODE_ENV=test ts-mocha \"test/**/*.ts\" --recursive --exit",
+    "mocha": "npm run clean && NODE_ENV=test mocha --require ts-node/register --require source-map-support/register \"test/**/*.ts\" --recursive --exit",
     "compile": "shx rm -rf lib/ && tsc",
     "update-dependencies": "ncu -u"
   },
@@ -41,11 +41,11 @@
     "@feathersjs/express": "^4.5.11",
     "@feathersjs/feathers": "^4.5.11",
     "@feathersjs/socketio": "^4.5.11",
+    "@seald-io/nedb": "^2.2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "feathers-nedb": "^6.0.0",
     "helmet": "^4.6.0",
-    "nedb": "^1.8.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
@@ -55,7 +55,6 @@
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mocha": "^9.0.0",
-    "@types/nedb": "^1.8.12",
     "@types/serve-favicon": "^2.5.3",
     "axios": "^0.24.0",
     "mocha": "^9.1.3",
@@ -63,7 +62,7 @@
     "npm-check-updates": "^12.0.5",
     "nyc": "^15.1.0",
     "shx": "^0.3.3",
-    "ts-mocha": "^8.0.0",
+    "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
     "typescript": "^4.5.4"
