--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "npm run compile && node lib/",
     "clean": "shx rm -rf test/data/",
     "coverage": "nyc npm run mocha",
-    "mocha": "npm run clean && NODE_ENV=test ts-mocha \"test/**/*.ts\" --recursive --exit",
+    "mocha": "npm run clean && NODE_ENV=test mocha --require ts-node/register --require source-map-support/register \"test/**/*.ts\" --recursive --exit",
     "compile": "shx rm -rf lib/ && tsc",
     "update-dependencies": "ncu -u"
   },
@@ -41,31 +41,30 @@
     "@feathersjs/express": "^4.5.11",
     "@feathersjs/feathers": "^4.5.11",
     "@feathersjs/socketio": "^4.5.11",
+    "@seald-io/nedb": "^2.2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "feathers-nedb": "^5.1.0",
+    "feathers-nedb": "^6.0.0",
     "helmet": "^4.6.0",
-    "nedb": "^1.8.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mocha": "^9.0.0",
-    "@types/nedb": "^1.8.12",
     "@types/serve-favicon": "^2.5.3",
     "axios": "^0.24.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
-    "npm-check-updates": "^12.0.2",
+    "npm-check-updates": "^12.0.5",
     "nyc": "^15.1.0",
     "shx": "^0.3.3",
-    "ts-mocha": "^8.0.0",
+    "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   }
 }
