--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "update-dependencies": "ncu -u"
   },
   "dependencies": {
-    "@feathersjs/authentication": "^5.0.0-pre.16",
-    "@feathersjs/authentication-local": "^5.0.0-pre.16",
-    "@feathersjs/authentication-oauth": "^5.0.0-pre.16",
-    "@feathersjs/configuration": "^5.0.0-pre.16",
-    "@feathersjs/errors": "^5.0.0-pre.16",
-    "@feathersjs/express": "^5.0.0-pre.16",
-    "@feathersjs/feathers": "^5.0.0-pre.16",
-    "@feathersjs/socketio": "^5.0.0-pre.16",
+    "@feathersjs/authentication": "^5.0.0-pre.22",
+    "@feathersjs/authentication-local": "^5.0.0-pre.22",
+    "@feathersjs/authentication-oauth": "^5.0.0-pre.22",
+    "@feathersjs/configuration": "^5.0.0-pre.22",
+    "@feathersjs/errors": "^5.0.0-pre.22",
+    "@feathersjs/express": "^5.0.0-pre.22",
+    "@feathersjs/feathers": "^5.0.0-pre.22",
+    "@feathersjs/schema": "^5.0.0-pre.22",
+    "@feathersjs/socketio": "^5.0.0-pre.22",
     "@seald-io/nedb": "^2.2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
